--- a/editor/templates/editor/room.html
+++ b/editor/templates/editor/room.html
@@ -7,7 +7,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real-Time Code Editor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/codemirror.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/theme/dracula.min.css">
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/3024-day.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/3024-night.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/abbott.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/abcdef.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/ambiance.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/ayu-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/ayu-mirage.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/base16-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/base16-light.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/bespin.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/blackboard.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/cobalt.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/colorforth.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/darcula.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/dracula.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/duotone-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/duotone-light.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/eclipse.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/elegant.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/erlang-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/gruvbox-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/hopscotch.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/icecoder.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/idea.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/isotope.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/lesser-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/liquibyte.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/lucario.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/material.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/material-darker.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/material-palenight.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/material-ocean.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/mbo.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/mdn-like.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/midnight.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/monokai.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/moxer.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/neat.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/neo.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/night.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/nord.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/oceanic-next.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/panda-syntax.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/paraiso-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/paraiso-light.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/pastel-on-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/railscasts.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/rubyblue.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/seti.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/shadowfox.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/solarized.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/ssms.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/the-matrix.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/tomorrow-night-bright.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/tomorrow-night-eighties.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/ttcn.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/twilight.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/vibrant-ink.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/xq-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/xq-light.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/yeti.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/zenburn.min.css">
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,10 +85,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
-      <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.min.css" rel="stylesheet" />
+
+
+
+
     <style>
         body {
 
@@ -26,11 +97,15 @@
             color: #f8f8f2;
             display: flex;
             flex-direction: column;
-            padding: 20px;
             height: 100vh;
+            max-width: 100%;
             font-family: "Ubuntu", sans-serif;
             font-weight: 300;
             font-style: normal;
+        }
+
+        .row {
+            max-width: 100%;
         }
 
         h1 {
@@ -324,21 +399,80 @@
                     <button id="run-code" class="btn" data-executed="{{request.user}}">RUN</button>
                     <button id="save-code" class="btn btn-warning ml-2"><i
                             class="fa-regular fa-floppy-disk"></i></button>
-                    <button id="theme-toggle" class="btn btn-light ml-2"><i
-                            class="fa-solid fa-circle-half-stroke"></i></button>
-                            <a
-                            class="btn btn-outline-info"
-                            data-mdb-collapse-init
-                            href="#collapseExample"
-                            role="button"
-                            aria-expanded="false"
-                            aria-controls="collapseExample"
-                          >
-                          <i class="fa-solid fa-share-nodes"></i>
-                          </a>
-                          <button class="collapse" id="collapseExample" style="cursor: text;">
-                            <a class="p-2" href="{{url}}">{{url}}</a>
-                          </button>
+                    <select id="theme-selector" style="padding:7px; border-radius: 5px;">
+                        <option value="default">Default Theme</option>
+                        <option value="3024-day">3024 Day</option>
+                        <option value="3024-night">3024 Night</option>
+                        <option value="abbott">Abbott</option>
+                        <option value="abcdef">ABCDEF</option>
+                        <option value="ambiance">Ambiance</option>
+                        <option value="ayu-dark">Ayu Dark</option>
+                        <option value="ayu-mirage">Ayu Mirage</option>
+                        <option value="base16-dark">Base16 Dark</option>
+                        <option value="base16-light">Base16 Light</option>
+                        <option value="bespin">Bespin</option>
+                        <option value="blackboard">Blackboard</option>
+                        <option value="cobalt">Cobalt</option>
+                        <option value="colorforth">Colorforth</option>
+                        <option value="darcula">Darcula</option>
+                        <option value="dracula">Dracula</option>
+                        <option value="duotone-dark">Duotone Dark</option>
+                        <option value="duotone-light">Duotone Light</option>
+                        <option value="eclipse">Eclipse</option>
+                        <option value="elegant">Elegant</option>
+                        <option value="erlang-dark">Erlang Dark</option>
+                        <option value="gruvbox-dark">Gruvbox Dark</option>
+                        <option value="hopscotch">Hopscotch</option>
+                        <option value="icecoder">Icecoder</option>
+                        <option value="idea">IDEA</option>
+                        <option value="isotope">Isotope</option>
+                        <option value="lesser-dark">Lesser Dark</option>
+                        <option value="liquibyte">Liquibyte</option>
+                        <option value="lucario">Lucario</option>
+                        <option value="material">Material</option>
+                        <option value="material-darker">Material Darker</option>
+                        <option value="material-palenight">Material Palenight</option>
+                        <option value="material-ocean">Material Ocean</option>
+                        <option value="mbo">MBO</option>
+                        <option value="mdn-like">MDN Like</option>
+                        <option value="midnight">Midnight</option>
+                        <option value="monokai">Monokai</option>
+                        <option value="moxer">Moxer</option>
+                        <option value="neat">Neat</option>
+                        <option value="neo">Neo</option>
+                        <option value="night">Night</option>
+                        <option value="nord">Nord</option>
+                        <option value="oceanic-next">Oceanic Next</option>
+                        <option value="panda-syntax">Panda Syntax</option>
+                        <option value="paraiso-dark">Paraiso Dark</option>
+                        <option value="paraiso-light">Paraiso Light</option>
+                        <option value="pastel-on-dark">Pastel on Dark</option>
+                        <option value="railscasts">Railscasts</option>
+                        <option value="rubyblue">Rubyblue</option>
+                        <option value="seti">Seti</option>
+                        <option value="shadowfox">Shadowfox</option>
+                        <option value="solarized dark">Solarized Dark</option>
+                        <option value="solarized light">Solarized Light</option>
+                        <option value="ssms">SSMS</option>
+                        <option value="the-matrix">The Matrix</option>
+                        <option value="tomorrow-night-bright">Tomorrow Night Bright</option>
+                        <option value="tomorrow-night-eighties">Tomorrow Night Eighties</option>
+                        <option value="ttcn">TTCN</option>
+                        <option value="twilight">Twilight</option>
+                        <option value="vibrant-ink">Vibrant Ink</option>
+                        <option value="xq-dark">XQ Dark</option>
+                        <option value="xq-light">XQ Light</option>
+                        <option value="yeti">Yeti</option>
+                        <option value="zenburn">Zenburn</option>
+                    </select>
+
+                    <a class="btn btn-outline-info" data-mdb-collapse-init href="#collapseExample" role="button"
+                        aria-expanded="false" aria-controls="collapseExample">
+                        <i class="fa-solid fa-share-nodes"></i>
+                    </a>
+                    <span class="collapse" id="collapseExample" style="cursor: text;">
+                        <a class="p-2 bg-light" href="{{url}}">{{url}}</a>
+                    </span>
                 </div>
                 <form id="codeForm" method="POST" action="{% url 'save_code' %}">
                     <textarea id="editor" data-user="{{request.user}}"></textarea>
@@ -502,11 +636,17 @@
         document.getElementById('save-code').addEventListener('click', saveCode);
 
 
-        let isDracula = true;
+        // let isDracula = true;
 
-        document.getElementById('theme-toggle').addEventListener('click', () => {
-            isDracula = !isDracula;
-            editor.setOption("theme", isDracula ? "dracula" : "default");
+        // document.getElementById('theme-toggle').addEventListener('click', () => {
+        //     isDracula = !isDracula;
+        //     editor.setOption("theme", isDracula ? "dracula" : "default");
+        // });
+        const themeSelector = document.getElementById('theme-selector');
+        themeSelector.addEventListener('change', () => {
+            console.log('selector: ', themeSelector.value)
+            const selectedTheme = themeSelector.value;
+            editor.setOption('theme', selectedTheme);
         });
 
         // Load code when the page loads
@@ -531,9 +671,9 @@
             if (taskIdReceived) {
                 taskId = taskIdReceived;
             }
-            console.log('task id is : ', taskId)
-            console.log('taskIdReceived id is : ', taskIdReceived)
-            console.log('Output : ', output)
+            // console.log('task id is : ', taskId)
+            // console.log('taskIdReceived id is : ', taskIdReceived)
+            // console.log('Output : ', output)
 
 
 
@@ -572,17 +712,23 @@
             console.error('WebSocket closed unexpectedly');
         };
 
+        let debounceTimer;
+
         editor.on('change', function () {
             if (!isLocalChange) {
+                clearTimeout(debounceTimer);
                 const rawCode = editor.getValue();
                 const coding_by = editorElement.dataset.user;
-                console.log(coding_by)
-                socket.send(JSON.stringify({
-                    'raw_code': rawCode,
-                    'coding_by': coding_by
-                }));
+
+                debounceTimer = setTimeout(() => {
+                    socket.send(JSON.stringify({
+                        'raw_code': rawCode,
+                        'coding_by': coding_by
+                    }));
+                }, 1000); // Wait 300ms after the user stops typing
             }
         });
+
 
         btn.addEventListener('click', function () {
             const code = editor.getValue();
